--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,9 @@
 FROM node:16-alpine
 
-WORKDIR '/app'
+WORKDIR /app
 
-COPY package.json .
+COPY package.json ./
+
 RUN npm install
 
-COPY . .
-
-CMD [ "npm", "run", "start" ]
+RUN chown -R node:node /app/node_modules
